--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
               <div class="mask" style="background-color: rgba(0, 0, 0, 0.7);backdrop-filter: blur(2px);">
                 <div class="text-center p-5">
                   <div class="avatar p-1"><img class="img-thumbnail shadow-2-strong"
-                      src="https://avatars.githubusercontent.com/u/95130614" width="160" height="160" /></div>
+                      src="https://avatars.githubusercontent.com/u/166640308?v=4" width="160" height="160" /></div>
                   <div class="header-bio mt-3">
                     <div data-aos="zoom-in" data-aos-delay="0">
                       <h2 class="h1">Alireza (Arman-async)</h2>
@@ -140,7 +140,7 @@
                         style="width:24px;opacity:0.85;"></i> Age</div>
                   </div>
                   <div class="col-sm-7">
-                    <div class="pb-2">28</div>
+                    <div class="pb-2">18</div>
                   </div>
                   <div class="col-sm-5">
                     <div class="pb-2 fw-bolder"><i class="far fa-envelope pe-2 text-muted"
@@ -191,7 +191,8 @@
                   <div class="progress my-2 rounded" style="height: 20px">
                     <div class="progress-bar bg-info" role="progressbar" data-aos="zoom-in-right" data-aos-delay="300"
                       data-aos-anchor=".skills-section" style="width: 30%" aria-valuenow="30" aria-valuemin="0"
-                      aria-valuemax="100">Beginner</div>
+                      aria-valuemax="100">Learning...
+                      </div>
                   </div>
                 </div>
                 <div class="mb-3"><span class="fw-bolder">Linux</span>
@@ -205,7 +206,16 @@
                   <div class="progress my-2 rounded" style="height: 20px">
                     <div class="progress-bar bg-info" role="progressbar" data-aos="zoom-in-right" data-aos-delay="300"
                       data-aos-anchor=".skills-section" style="width: 99%" aria-valuenow="99" aria-valuemin="0"
-                      aria-valuemax="100">Advance</div>
+                      aria-valuemax="100">Advance
+                    </div>
+                  </div>
+                </div>
+                <div class="mb-3"><span class="fw-bolder">Designing Patterns</span>
+                  <div class="progress my-2 rounded" style="height: 20px">
+                    <div class="progress-bar bg-info" role="progressbar" data-aos="zoom-in-right" data-aos-delay="300"
+                      data-aos-anchor=".skills-section" style="width: 48%" aria-valuenow="48" aria-valuemin="0"
+                      aria-valuemax="100">Professional
+                    </div>
                   </div>
                 </div>
               </div>
@@ -215,8 +225,8 @@
                 <div class="mb-3"><span class="fw-bolder">HTML - CSS</span>
                   <div class="progress my-2 rounded" style="height: 20px">
                     <div class="progress-bar bg-secondary" role="progressbar" data-aos="zoom-in-right"
-                      data-aos-delay="600" data-aos-anchor=".skills-section" style="width: 45%" aria-valuenow="45"
-                      aria-valuemin="0" aria-valuemax="100">Begin ner</div>
+                      data-aos-delay="600" data-aos-anchor=".skills-section" style="width: 60%" aria-valuenow="60"
+                      aria-valuemin="0" aria-valuemax="100">Learning...</div>
                   </div>
                 </div>
                 <div class="mb-3"><span class="fw-bolder">SEO</span>
