--- a/index.html
+++ b/index.html
@@ -101,8 +101,8 @@
                     </div>
                     <div class="d-print-none">
                       <!-- <a class="btn btn-outline-light btn-lg shadow-sm mt-1 me-3" href="material-resume.pdf" data-aos="fade-right" data-aos-delay="700">Download CV</a> -->
-                      <a class="btn btn-info btn-lg shadow-sm mt-1" href="#contact" data-aos="fade-left"
-                        data-aos-delay="700">Hire Me</a>
+                      <a class="btn btn-info btn-lg shadow-sm mt-1" href="https://t.me/alireza_async" data-aos="fade-left"
+                        data-aos-delay="700">Communication With Me</a>
                     </div>
                   </div>
                 </div>
