--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                           </li>
                           <li class="nav-item"><a class="nav-link" target="_blank" href="https://t.me/alireza_async"
                               title="Telegram"><i class="fab fa-telegram"></i><span
-                                class="menu-title sr-only">Facebook</span></a>
+                                class="menu-title sr-only">Telegram</span></a>
                           </li>
                           <li class="nav-item"><a class="nav-link" target="_blank"
                               href="https://www.instagram.com/arman-async" title="Instagram"><i
@@ -150,14 +150,14 @@
                     <div class="pb-2">armanparsi536@gmail.com</div>
                   </div>
                   <div class="col-sm-5">
-                    <div class="pb-2 fw-bolder"><i class="fab fa-skype pe-2 text-muted"
+                    <div class="pb-2 fw-bolder"><i class="fab fa-telegram pe-2 text-muted"
                         style="width:24px;opacity:0.85;"></i> Telegram</div>
                   </div>
                   <div class="col-sm-7">
                     <div class="pb-2">@alireza_async</div>
                   </div>
                   <div class="col-sm-5">
-                    <div class="pb-2 fw-bolder"><i class="fas fa-phone pe-2 text-muted"
+                    <div class="pb-2 fw-bolder"><i class="fas fa-instagram pe-2 text-muted"
                         style="width:24px;opacity:0.85;"></i> Instagram</div>
                   </div>
                   <div class="col-sm-7">
